# Anima

./: .flake8  .gitignore  .pylintrc  CONTRIBUTING.md  Dockerfile  Makefile  README.md  basic.py  circle.py  compose.yml  curve.py  curves.py  general.py  geometry.py  line.py  main.py  pyproject.toml  run.py  segment.py  shape.py  shapes.py
.blender/config/: userpref.blend
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  setup_display.sh  test_workspace.sh
.github/: copilot-instructions.md
.github/workflows/: auto-semver-tag.yml  build_devcontainer.yml  run_tests.yml  test_anima.yml  test_devcontainer.yml
anima/: main.py  pyproject.toml
anima/.ideas/: method_handler.py  variable.py
anima/animation/: construct.py  driver.py  updater.py
anima/backups/: poly_spline.py  uuid.py
anima/globals/: general.py
anima/graphing/: axes.py
anima/latex/: glyph.py  glyph_mapping.lua  tex_file.py
anima/latex/scripts/: glyph_mapping.lua
anima/primitives/: attachments.py  bezier.py  chains.py  curves.py  curves2.py  dashed_curves.py  effect.py  endcaps.py  joints.py  lines.py  mesh.py  object.py  points.py  polytopes.py
anima/primitives/tests/: test_chains.py  test_joints.py
anima/startup/: __init__.py  blender_startup.py  customs.py  temp.py
anima/tests/: test_curves.py
apeiron/: curves.py  general.py  main.py
apeiron/animation/: action.py  construct.py  driver.py  intro.py  updater.py
apeiron/backups/: boolean.py  clipper.py  grease.py  setattr_overload.py
apeiron/global/: general.py
apeiron/globals/: easybpy.py  general.py
apeiron/graphing/: axes.py
apeiron/primitives/: attachments.py  base.py  bezier.py  chains.py  curve.py  curves.py  curves2.py  dashed_curves.py  effect.py  endcaps.py  joins.py  joints.py  lines.py  object.py  points.py  polytopes.py
apeiron/primitives/tests/: test_chains.py  test_curves.py  test_joints.py
apeiron/startup/: blender_startup.py  customs.py  driver_callables.py  temp.py
blend/: line.blend  line.blend1
scripts/: blender_pip_install.sh  enter_devcontainer.sh  enter_venv.sh  install_blender_dependencies.py
src/anima/: main.py
src/anima/.ideas/: boolean.py  current_val.py  curves.py  setattr_overload.py  uuid.py
src/anima/animation/: action.py  construct.py  updater.py
src/anima/diagnostics/: __init__.py  logger.py  profiler.py
src/anima/globals/: easybpy.py  general.py
src/anima/latex/: compiler.py  glyph.py  glyph_utils.py  tex_document.py  tex_document_processor.py  tex_file.py  tex_file_processor.py  tex_object.py  tex_parser.py  tex_string_parser.py
src/anima/latex/scripts/: glyph_mapping.lua
src/anima/primitives/: attachments.py  bezier.py  bezier_curve.py  bezier_spline.py  chains.py  curves.py  dashed_curves.py  effect.py  endcaps.py  joints.py  lines.py  mesh.py  object.py  points.py  polytopes.py
src/anima/utils/: blender.py  blender_utils.py  input.py  output.py  project.py  project_utils.py  reload.py  run_utils.py  subprocess.py
src/anima/utils/scripts/: reload.py
src/anima/utils/socket/: client.py  common.py  server.py
tests/: test_utils.py
tests/latex/: test_tex_parser.py
tests/primitives/: test_chains.py  test_curves.py  test_joints.py
tests/visual_tests/: test_curves.py  test_latex.py
