[build-system]
requires = ["setuptools>=65.0", "setuptools-scm[toml]>=8.3", "wheel"]
build-backend = "setuptools.build_meta"

## Project configurations
[project]
name = "anima"
dynamic = ["version"]
requires-python = ">=3.11.4,<=3.11.13" # Ensure the range contains Blender's Python version
dependencies = [
   "bpy==4.4.0",
   "mathutils==3.3.0",
   "numpy==1.26.4",
   "scipy==1.15.3",
   "pytest==8.4.0",
   "plastex==3.1",
   "dill==0.4.0",
   "loguru==0.7.3",
]

## Blender-specific configurations
[tool.blender]
root-dir = "~/Applications/blender/blender-4.3.2-linux-x64"

## Other tool configurations
[tool.setuptools]
packages.find.where = ["src"]
package-dir = { "" = "src" }

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--ignore=tests/visual_tests/",
]
