[build-system]
requires = ["setuptools>=65", "setuptools-scm[toml]>=8.3"]
build-backend = "setuptools.build_meta"

[project]
name = "anima"
dynamic = ["version"]
requires-python = "==3.11.9"
dependencies = [
   "scipy==1.15.3",
   "bpy==4.4.0",
   "pytest==8.4.0",
   "numpy==2.3.0",
   "mathutils==3.3.0"
]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.pytest.ini_options]
addopts = [
    "--ignore=tests/",
]